CustomHead texture recode
- change SkullMeta to match latest PaperMc changes regarding texture player_head API (removing SkullMeta and adding PlayerProfile)